--- a/.gitignore
+++ b/.gitignore
@@ -3,191 +3,28 @@ smartadmin-core-full/Sandbox/Sandbox.csproj
 smartadmin-core-full/Sandbox/Program.cs
 smartadmin-core-full/Sandbox/Program.cs
 smartadmin-core-full/Sandbox/Sandbox.csproj
-tpCommon/Custom_Exceptions/bin/Debug/net5.0/Custom_Exceptions.dll
-tpCommon/Custom_Exceptions/bin/Debug/net5.0/Custom_Exceptions.pdb
-tpCommon/Custom_Exceptions/bin/Debug/net5.0/Data.deps.json
-tpCommon/Custom_Exceptions/bin/Debug/net5.0/Data.dll
-tpCommon/Custom_Exceptions/bin/Debug/net5.0/Data.exe
-tpCommon/Custom_Exceptions/bin/Debug/net5.0/Data.pdb
-tpCommon/Custom_Exceptions/bin/Debug/net5.0/Data.QA.dll
-tpCommon/Custom_Exceptions/bin/Debug/net5.0/Data.QA.pdb
-tpCommon/Custom_Exceptions/bin/Debug/net5.0/Data.runtimeconfig.dev.json
-tpCommon/Custom_Exceptions/bin/Debug/net5.0/Global_Settings.dll
-tpCommon/Custom_Exceptions/bin/Debug/net5.0/Global_Settings.pdb
-tpCommon/Custom_Exceptions/bin/Debug/net5.0/ViewModels.dll
-tpCommon/Custom_Exceptions/bin/Debug/net5.0/ViewModels.pdb
-tpCommon/Custom_Exceptions/obj/Custom_Exceptions.csproj.nuget.dgspec.json
-tpCommon/Custom_Exceptions/obj/Custom_Exceptions.csproj.nuget.g.props
-tpCommon/Custom_Exceptions/obj/Debug/net5.0/Custom_Exceptions.assets.cache
-tpCommon/Custom_Exceptions/obj/Debug/net5.0/Custom_Exceptions.csproj.AssemblyReference.cache
-tpCommon/Custom_Exceptions/obj/Debug/net5.0/Custom_Exceptions.csproj.CoreCompileInputs.cache
-tpCommon/Custom_Exceptions/obj/Debug/net5.0/Custom_Exceptions.csproj.FileListAbsolute.txt
-tpCommon/Custom_Exceptions/obj/Debug/net5.0/Custom_Exceptions.dll
-tpCommon/Custom_Exceptions/obj/Debug/net5.0/Custom_Exceptions.GeneratedMSBuildEditorConfig.editorconfig
-tpCommon/Custom_Exceptions/obj/Debug/net5.0/Custom_Exceptions.pdb
-tpCommon/Custom_Exceptions/obj/project.assets.json
-tpCommon/Custom_Exceptions/obj/project.nuget.cache
-tpCommon/Data.QA/bin/Debug/net5.0/Data.QA.dll
-tpCommon/Data.QA/bin/Debug/net5.0/Data.QA.pdb
-tpCommon/Data.QA/bin/Debug/net5.0/Data.QA.runtimeconfig.dev.json
-tpCommon/Data.QA/bin/Debug/net5.0/ref/Data.QA.dll
-tpCommon/Data.QA/obj/Data.QA.csproj.nuget.dgspec.json
-tpCommon/Data.QA/obj/Data.QA.csproj.nuget.g.props
-tpCommon/Data.QA/obj/Debug/net5.0/Data.QA.assets.cache
-tpCommon/Data.QA/obj/Debug/net5.0/Data.QA.csproj.AssemblyReference.cache
-tpCommon/Data.QA/obj/Debug/net5.0/Data.QA.csproj.CoreCompileInputs.cache
-tpCommon/Data.QA/obj/Debug/net5.0/Data.QA.csproj.FileListAbsolute.txt
-tpCommon/Data.QA/obj/Debug/net5.0/Data.QA.dll
-tpCommon/Data.QA/obj/Debug/net5.0/Data.QA.GeneratedMSBuildEditorConfig.editorconfig
-tpCommon/Data.QA/obj/Debug/net5.0/Data.QA.genruntimeconfig.cache
-tpCommon/Data.QA/obj/Debug/net5.0/Data.QA.pdb
-tpCommon/Data.QA/obj/Debug/net5.0/ref/Data.QA.dll
-tpCommon/Data.QA/obj/project.assets.json
-tpCommon/Data.QA/obj/project.nuget.cache
-tpCommon/Data/bin/Debug/net5.0/Data.deps.json
-tpCommon/Data/bin/Debug/net5.0/Data.dll
-tpCommon/Data/bin/Debug/net5.0/Data.exe
-tpCommon/Data/bin/Debug/net5.0/Data.pdb
-tpCommon/Data/bin/Debug/net5.0/Data.runtimeconfig.dev.json
-tpCommon/Data/bin/Debug/net5.0/ref/Data.dll
-tpCommon/Data/obj/Data.csproj.nuget.dgspec.json
-tpCommon/Data/obj/Data.csproj.nuget.g.props
-tpCommon/Data/obj/Debug/net5.0/apphost.exe
-tpCommon/Data/obj/Debug/net5.0/Data.assets.cache
-tpCommon/Data/obj/Debug/net5.0/Data.csproj.AssemblyReference.cache
-tpCommon/Data/obj/Debug/net5.0/Data.csproj.CoreCompileInputs.cache
-tpCommon/Data/obj/Debug/net5.0/Data.csproj.FileListAbsolute.txt
-tpCommon/Data/obj/Debug/net5.0/Data.dll
-tpCommon/Data/obj/Debug/net5.0/Data.GeneratedMSBuildEditorConfig.editorconfig
-tpCommon/Data/obj/Debug/net5.0/Data.genruntimeconfig.cache
-tpCommon/Data/obj/Debug/net5.0/Data.pdb
-tpCommon/Data/obj/Debug/net5.0/ref/Data.dll
-tpCommon/Data/obj/project.assets.json
-tpCommon/Data/obj/project.nuget.cache
-tpCommon/Extensions/bin/Debug/net5.0/Custom_Exceptions.dll
-tpCommon/Extensions/bin/Debug/net5.0/Custom_Exceptions.pdb
-tpCommon/Extensions/bin/Debug/net5.0/Data.deps.json
-tpCommon/Extensions/bin/Debug/net5.0/Data.dll
-tpCommon/Extensions/bin/Debug/net5.0/Data.exe
-tpCommon/Extensions/bin/Debug/net5.0/Data.pdb
-tpCommon/Extensions/bin/Debug/net5.0/Data.QA.dll
-tpCommon/Extensions/bin/Debug/net5.0/Data.QA.pdb
-tpCommon/Extensions/bin/Debug/net5.0/Data.runtimeconfig.dev.json
-tpCommon/Extensions/bin/Debug/net5.0/Extensions.deps.json
-tpCommon/Extensions/bin/Debug/net5.0/Extensions.dll
-tpCommon/Extensions/bin/Debug/net5.0/Extensions.pdb
-tpCommon/Extensions/bin/Debug/net5.0/Global_Settings.dll
-tpCommon/Extensions/bin/Debug/net5.0/Global_Settings.pdb
-tpCommon/Extensions/bin/Debug/net5.0/Services.dll
-tpCommon/Extensions/bin/Debug/net5.0/Services.pdb
-tpCommon/Extensions/bin/Debug/net5.0/ViewModels.dll
-tpCommon/Extensions/bin/Debug/net5.0/ViewModels.pdb
-tpCommon/Extensions/obj/Debug/net5.0/Extensions.assets.cache
-tpCommon/Extensions/obj/Debug/net5.0/Extensions.csproj.AssemblyReference.cache
-tpCommon/Extensions/obj/Debug/net5.0/Extensions.csproj.CoreCompileInputs.cache
-tpCommon/Extensions/obj/Debug/net5.0/Extensions.csproj.FileListAbsolute.txt
-tpCommon/Extensions/obj/Debug/net5.0/Extensions.dll
-tpCommon/Extensions/obj/Debug/net5.0/Extensions.GeneratedMSBuildEditorConfig.editorconfig
-tpCommon/Extensions/obj/Debug/net5.0/Extensions.pdb
-tpCommon/Extensions/obj/Extensions.csproj.nuget.dgspec.json
-tpCommon/Extensions/obj/Extensions.csproj.nuget.g.props
-tpCommon/Extensions/obj/project.assets.json
-tpCommon/Extensions/obj/project.nuget.cache
-tpCommon/Global_Settings/bin/Debug/net5.0/Global_Settings.dll
-tpCommon/Global_Settings/bin/Debug/net5.0/Global_Settings.pdb
-tpCommon/Global_Settings/bin/Debug/net5.0/ref/Global_Settings.dll
-tpCommon/Global_Settings/obj/Debug/net5.0/Global_Settings.assets.cache
-tpCommon/Global_Settings/obj/Debug/net5.0/Global_Settings.csproj.AssemblyReference.cache
-tpCommon/Global_Settings/obj/Debug/net5.0/Global_Settings.csproj.FileListAbsolute.txt
-tpCommon/Global_Settings/obj/Debug/net5.0/Global_Settings.dll
-tpCommon/Global_Settings/obj/Debug/net5.0/Global_Settings.GeneratedMSBuildEditorConfig.editorconfig
-tpCommon/Global_Settings/obj/Debug/net5.0/Global_Settings.pdb
-tpCommon/Global_Settings/obj/Debug/net5.0/ref/Global_Settings.dll
-tpCommon/Global_Settings/obj/Global_Settings.csproj.nuget.dgspec.json
-tpCommon/Global_Settings/obj/Global_Settings.csproj.nuget.g.props
-tpCommon/Global_Settings/obj/project.assets.json
-tpCommon/Global_Settings/obj/project.nuget.cache
-tpCommon/Sandbox/bin/Debug/net5.0/Custom_Exceptions.dll
-tpCommon/Sandbox/bin/Debug/net5.0/Custom_Exceptions.pdb
-tpCommon/Sandbox/bin/Debug/net5.0/Data.deps.json
-tpCommon/Sandbox/bin/Debug/net5.0/Data.dll
-tpCommon/Sandbox/bin/Debug/net5.0/Data.exe
-tpCommon/Sandbox/bin/Debug/net5.0/Data.pdb
-tpCommon/Sandbox/bin/Debug/net5.0/Data.QA.dll
-tpCommon/Sandbox/bin/Debug/net5.0/Data.QA.pdb
-tpCommon/Sandbox/bin/Debug/net5.0/Data.runtimeconfig.dev.json
-tpCommon/Sandbox/bin/Debug/net5.0/Global_Settings.dll
-tpCommon/Sandbox/bin/Debug/net5.0/Global_Settings.pdb
-tpCommon/Sandbox/bin/Debug/net5.0/Sandbox.deps.json
-tpCommon/Sandbox/bin/Debug/net5.0/Sandbox.dll
-tpCommon/Sandbox/bin/Debug/net5.0/Sandbox.exe
-tpCommon/Sandbox/bin/Debug/net5.0/Sandbox.pdb
-tpCommon/Sandbox/bin/Debug/net5.0/Sandbox.runtimeconfig.dev.json
-tpCommon/Sandbox/bin/Debug/net5.0/Services.dll
-tpCommon/Sandbox/bin/Debug/net5.0/Services.pdb
-tpCommon/Sandbox/bin/Debug/net5.0/ViewModels.dll
-tpCommon/Sandbox/bin/Debug/net5.0/ViewModels.pdb
-tpCommon/Sandbox/obj/Debug/net5.0/apphost.exe
-tpCommon/Sandbox/obj/Debug/net5.0/Sandbox.assets.cache
-tpCommon/Sandbox/obj/Debug/net5.0/Sandbox.csproj.AssemblyReference.cache
-tpCommon/Sandbox/obj/Debug/net5.0/Sandbox.csproj.CoreCompileInputs.cache
-tpCommon/Sandbox/obj/Debug/net5.0/Sandbox.csproj.FileListAbsolute.txt
-tpCommon/Sandbox/obj/Debug/net5.0/Sandbox.dll
-tpCommon/Sandbox/obj/Debug/net5.0/Sandbox.GeneratedMSBuildEditorConfig.editorconfig
-tpCommon/Sandbox/obj/Debug/net5.0/Sandbox.genruntimeconfig.cache
-tpCommon/Sandbox/obj/Debug/net5.0/Sandbox.pdb
-tpCommon/Sandbox/obj/project.assets.json
-tpCommon/Sandbox/obj/project.nuget.cache
-tpCommon/Sandbox/obj/Sandbox.csproj.nuget.dgspec.json
-tpCommon/Sandbox/obj/Sandbox.csproj.nuget.g.props
-tpCommon/Services/bin/Debug/net5.0/Custom_Exceptions.dll
-tpCommon/Services/bin/Debug/net5.0/Custom_Exceptions.pdb
-tpCommon/Services/bin/Debug/net5.0/Data.deps.json
-tpCommon/Services/bin/Debug/net5.0/Data.dll
-tpCommon/Services/bin/Debug/net5.0/Data.exe
-tpCommon/Services/bin/Debug/net5.0/Data.pdb
-tpCommon/Services/bin/Debug/net5.0/Data.QA.dll
-tpCommon/Services/bin/Debug/net5.0/Data.QA.pdb
-tpCommon/Services/bin/Debug/net5.0/Data.runtimeconfig.dev.json
-tpCommon/Services/bin/Debug/net5.0/Global_Settings.dll
-tpCommon/Services/bin/Debug/net5.0/Global_Settings.pdb
-tpCommon/Services/bin/Debug/net5.0/ref/Services.dll
-tpCommon/Services/bin/Debug/net5.0/Services.deps.json
-tpCommon/Services/bin/Debug/net5.0/Services.dll
-tpCommon/Services/bin/Debug/net5.0/Services.pdb
-tpCommon/Services/bin/Debug/net5.0/ViewModels.dll
-tpCommon/Services/bin/Debug/net5.0/ViewModels.pdb
-tpCommon/Services/obj/Debug/net5.0/ref/Services.dll
-tpCommon/Services/obj/Debug/net5.0/Services.assets.cache
-tpCommon/Services/obj/Debug/net5.0/Services.csproj.AssemblyReference.cache
-tpCommon/Services/obj/Debug/net5.0/Services.csproj.CoreCompileInputs.cache
-tpCommon/Services/obj/Debug/net5.0/Services.csproj.FileListAbsolute.txt
-tpCommon/Services/obj/Debug/net5.0/Services.dll
-tpCommon/Services/obj/Debug/net5.0/Services.GeneratedMSBuildEditorConfig.editorconfig
-tpCommon/Services/obj/Debug/net5.0/Services.pdb
-tpCommon/Services/obj/project.assets.json
-tpCommon/Services/obj/project.nuget.cache
-tpCommon/Services/obj/Services.csproj.nuget.dgspec.json
-tpCommon/Services/obj/Services.csproj.nuget.g.props
-tpCommon/ViewModels/bin/Debug/net5.0/Data.deps.json
-tpCommon/ViewModels/bin/Debug/net5.0/Data.dll
-tpCommon/ViewModels/bin/Debug/net5.0/Data.exe
-tpCommon/ViewModels/bin/Debug/net5.0/Data.pdb
-tpCommon/ViewModels/bin/Debug/net5.0/Data.QA.dll
-tpCommon/ViewModels/bin/Debug/net5.0/Data.QA.pdb
-tpCommon/ViewModels/bin/Debug/net5.0/Data.runtimeconfig.dev.json
-tpCommon/ViewModels/bin/Debug/net5.0/Global_Settings.dll
-tpCommon/ViewModels/bin/Debug/net5.0/Global_Settings.pdb
-tpCommon/ViewModels/bin/Debug/net5.0/ViewModels.dll
-tpCommon/ViewModels/bin/Debug/net5.0/ViewModels.pdb
-tpCommon/ViewModels/obj/Debug/net5.0/ViewModels.assets.cache
-tpCommon/ViewModels/obj/Debug/net5.0/ViewModels.csproj.AssemblyReference.cache
-tpCommon/ViewModels/obj/Debug/net5.0/ViewModels.csproj.CoreCompileInputs.cache
-tpCommon/ViewModels/obj/Debug/net5.0/ViewModels.csproj.FileListAbsolute.txt
-tpCommon/ViewModels/obj/Debug/net5.0/ViewModels.dll
-tpCommon/ViewModels/obj/Debug/net5.0/ViewModels.GeneratedMSBuildEditorConfig.editorconfig
-tpCommon/ViewModels/obj/Debug/net5.0/ViewModels.pdb
-tpCommon/ViewModels/obj/project.assets.json
-tpCommon/ViewModels/obj/project.nuget.cache
-tpCommon/ViewModels/obj/ViewModels.csproj.nuget.dgspec.json
-tpCommon/ViewModels/obj/ViewModels.csproj.nuget.g.props
+tpCommon/Custom_Exceptions/bin/
+
+tpCommon/Custom_Exceptions/obj/
+
+tpCommon/Data.QA/bin/
+
+tpCommon/Data.QA/obj/
+
+tpCommon/Data/bin/
+tpCommon/Data/obj/
+
+tpCommon/Extensions/bin/
+
+tpCommon/Extensions/obj/
+
+tpCommon/Global_Settings/bin/
+
+tpCommon/Global_Settings/obj/
+
+tpCommon/Sandbox/bin/
+tpCommon/Sandbox/obj
+tpCommon/Services/bin/
+tpCommon/Services/obj/
+tpCommon/ViewModels/bin/
+tpCommon/ViewModels/obj/
